--- a/static/styles.css
+++ b/static/styles.css
@@ -31,7 +31,6 @@ main {
 	border: 2px solid black;
 	border-radius: 50px;
 	padding: 10px;
-	position: relative;
 }
 
 .restaurant-item:hover {
@@ -45,13 +44,12 @@ main {
 	font-family: Didot;
 }
 
-.restaurant-links {
-	position: absolute;
-	right: 40px;
-	bottom: 0;
-}
-
 /* menu page */
+
+.center {
+	display: block;
+	text-align: center;
+}
 
 .menu-container {
 	max-width: 500px;
@@ -67,14 +65,16 @@ main {
 	margin-bottom: 10px;
 }
 
+img {
+	width: 150px;
+	height: auto;
+	margin: 10px auto;
+
+}
+
 .course {
 	text-align: center;
 	margin: 50px 0;
-}
-
-.course-hr {
-	width: 50%;
-	margin-bottom: 50px;
 }
 
 .name-price {
@@ -89,11 +89,6 @@ main {
 
 .item-price {
 	float: right;
-}
-
-.center-link {
-	display: block;
-	text-align: center;
 }
 
 /* forms */
