--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -3,6 +3,8 @@
 	<div class="form-container">
 		<h2>Are you sure you want to delete "{{ item.name }}" from <span style="text-decoration: underline">{{ restaurant.name }}</span>'s menu?</h2>
 
+		<div class="error">{{ error }}</div>
+
 		<form method="POST" action="{{ url_for('deleteMenuItem', restaurant_id = restaurant_id, menu_id = menu_id) }}" enctype="multipart/form-data">
 			<input class="submit-input" type="submit" value="Delete"> | <a href="{{ url_for('showMenu', restaurant_id = restaurant_id) }}">Cancel</a>
 		</form>
