--- a/templates/deleteRestaurant.html
+++ b/templates/deleteRestaurant.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 	<div class="form-container">
-		<h2>Are you sure you want to delete <span style="text-decoration: underline">{{ restaurant.name }}</span> from the list of restaurants?</h2>
+		<h2>Are you sure you want to delete the restaurant <span style="text-decoration: underline">{{ restaurant.name }}</span>?</h2>
 		<form method="POST" action="{{ url_for('deleteRestaurant', restaurant_id = restaurant_id) }}" enctype="multipart/form-data">
-			<input class="submit-input" type="submit" value="Delete"> | <a href="{{ url_for('showRestaurants') }}">Cancel</a>
+			<input class="submit-input" type="submit" value="Delete"> | <a href="{{ url_for('showMenu', restaurant_id = restaurant_id) }}">Cancel</a>
 		</form>
 	</div>
 {% endblock %}
