--- a/templates/editMenuItem.html
+++ b/templates/editMenuItem.html
@@ -3,6 +3,8 @@
 <div class="form-container">
 	<h2>Edit the information you wish to change for "{{ item.name }}" from <span style="text-decoration: underline">{{ restaurant.name }}</span>'s Menu</h2>
 
+	<div class="error">{{ error }}</div>
+
 	<form method="POST" action="{{ url_for('editMenuItem', restaurant_id = restaurant_id, menu_id = menu_id) }}" enctype="multipart/form-data">
 		<label>Name:</label>
 		<br>
