--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-	<a href="{{ url_for('showRestaurants') }}">Back to All Restaurants</a>
+	<a class="back-link" href="{{ url_for('showRestaurants') }}">Back to All Restaurants</a>
 	<br>
 	<br>
 	<div>
