--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,36 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="/static/styles.css">
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<title>Restaurants Menu App</title>
 	</head>
 	<body>
+		<div class="overflow">
+			{% if user %}
+			<img class="avatar" src="{{ user.picture }}">
+			<a class="signout-button" href="{{ url_for('gdisconnect') }}">Sign out</a>
+
+			{% else %}
+			<a class="signin-button" href="{{ url_for('showLogin') }}">Sign In</a>
+			{% endif %}
+
+		</div>
+
 		{% block body %}
 		{% endblock %}
+
+		<script>
+			$('.avatar').click(function() {
+				$('.signout-button').toggleClass('display')
+			});
+
+			$(document).click(function() {
+				if ( (!$(event.target).closest('.avatar').length)
+				&& (!$(event.target).closest('.signout-button').length) ) {
+					$('.signout-button').removeClass('display')
+				}
+			});
+
+		</script>
 	</body>
 </html>
