--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+	<a class="back-link" href="{{ url_for('showMenu', restaurant_id = restaurant_id) }}">Back to Menu</a>
 	<div class="form-container">
 		<h2>Are you sure you want to delete "{{ item.name }}" from <span style="text-decoration: underline">{{ restaurant.name }}</span>'s menu?</h2>
 
