--- a/templates/login.html
+++ b/templates/login.html
@@ -3,19 +3,47 @@
 	<head>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
+		<style type="text/css">
+			body {
+				font-family: sans-serif;
+				position: relative;
+			}
+			.form-container {
+				max-width: 700px;
+				margin: 0 auto;
+				font-size: 20px;
+				padding: 0 35px;
+			}
+			.back-link {
+				position: absolute;
+				top: 10px;
+			}
+			.center {
+				display: block;
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>
-		<div id="signinButton">
-			<span class="g-signin"
-					data-scope="openid email"
-					data-clientid="738102744369-3ldsk7n25a9ubt1ngmfmekrq6bs5pqo5.apps.googleusercontent.com"
-					data-redirecturi="postmessage"
-					data-accesstype="offline"
-					data-cookiepolicy="single_host_origin"
-					data-callback="signInCallback"
-					data-approvalprompt="force">
-			</span>
+		<a class="back-link" href="{{ url_for('showRestaurants') }}">Back to All Restaurants</a>
+		<br>
+		<br>
+		<br>
+		<div class="form-container">
+			<h2 class="center">Sign in with Google+</h2>
+			<div class="center" id="signinButton">
+				<span class="g-signin"
+						data-scope="openid email"
+						data-clientid="738102744369-3ldsk7n25a9ubt1ngmfmekrq6bs5pqo5.apps.googleusercontent.com"
+						data-redirecturi="postmessage"
+						data-accesstype="offline"
+						data-cookiepolicy="single_host_origin"
+						data-callback="signInCallback"
+						data-approvalprompt="force">
+				</span>
+			</div>
 		</div>
+
 		<div id="result"></div>
 
 		<script>
@@ -31,11 +59,7 @@
 						data: authResult['code'],
 						success: function(result) {
 							if (result) {
-								$('#result').html('Login Successful!<br>' + result + '<br>Redirecting...')
-
-								setTimeout(function() {
-									window.location.href = "/restaurants/";
-								}, 4000);
+								window.location.href = "/restaurants/";
 							} else if (authResult['error']) {
 								console.log('There was an error: ' + authResult['error']);
 							} else {
