--- a/templates/newMenuItem.html
+++ b/templates/newMenuItem.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+	<a class="back-link" href="{{ url_for('showMenu', restaurant_id = restaurant_id) }}">Back to Menu</a>
 	<div class="form-container">
 		<h2>Add a new menu item to <span style="text-decoration: underline">{{ restaurant.name }}</span>'s Menu</h2>
 		<div class="error">{{ error }}</div>
