--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,7 @@
 			});
 
 			$(document).click(function() {
-				if ( (!$(event.target).closest('.avatar').length)
-				&& (!$(event.target).closest('.signout-button').length) ) {
+				if (!$(event.target).closest('.signout-button').length) {
 					if ($('.signout-button').hasClass('display')) {
 						$('.signout-button').removeClass('display')
 
