--- a/templates/newMenuItem.html
+++ b/templates/newMenuItem.html
@@ -8,37 +8,37 @@
 			<label>Name:</label>
 			<br>
 			<div class="error">{{ name_error }}</div>
-			<input class="text-input" type="text" name="name" placeholder="Name of menu item">
+			<input class="text-input" type="text" name="name" placeholder="Name of menu item" value="{{ name }}">
 			<br>
 			<br>
 
 			<label>Price:</label>
 			<br>
 			<div class="error">{{ price_error }}</div>
-			<input class="text-input" type="text" name="price" placeholder="Price of menu item">
+			<input class="text-input" type="text" name="price" placeholder="Price of menu item" value="{{ price }}">
 			<br>
 			<br>
 
 			<label>Description:</label>
 			<br>
 			<div class="error">{{ description_error }}</div>
-			<textarea name="description" placeholder="Add a description of the menu item here"></textarea>
+			<textarea name="description" placeholder="Add a description of the menu item here">{{ description }}</textarea>
 			<br>
 			<br>
 
 			<label>Course:</label>
 			<br>
 			<div class="error">{{ course_error }}</div>
-			<input type="radio" name="course" value="Appetizer">
+			<input type="radio" name="course" value="Appetizer" {% if course == 'Appetizer' %}checked{% endif %}>
 			<label>Appetizer</label>
 			<br>
-			<input type="radio" name="course" value="Entree">
+			<input type="radio" name="course" value="Entree" {% if course == 'Entree' %}checked{% endif %}>
 			<label>Entree</label>
 			<br>
-			<input type="radio" name="course" value="Dessert">
+			<input type="radio" name="course" value="Dessert" {% if course == 'Dessert' %}checked{% endif %}>
 			<label>Dessert</label>
 			<br>
-			<input type="radio" name="course" value="Beverage">
+			<input type="radio" name="course" value="Beverage" {% if course == 'Beverage' %}checked{% endif %}>
 			<label>Beverage</label>
 			<br>
 			<br>
