change home page title

--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-	<h1>My RestaurantList</h1>
+	<h1>Restaurants for Mountain View, CA</h1>
 	<br>
 	<br>
 	<main>
