for editing items, the original values are now held in value parameters instead of placeholder parameters to allow for a more user-friendly experience

--- a/templates/editMenuItem.html
+++ b/templates/editMenuItem.html
@@ -10,21 +10,21 @@
 		<label>Name:</label>
 		<br>
 		<div></div>
-		<input class="text-input" type="text" name="name" placeholder="{{ item.name }}">
+		<input class="text-input" type="text" name="name" value="{{ item.name }}">
 		<br>
 		<br>
 
 		<label>Price:</label>
 		<br>
 		<div></div>
-		<input class="text-input" type="text" name="price" placeholder="{{ item.price }}">
+		<input class="text-input" type="text" name="price" value="{{ item.price }}">
 		<br>
 		<br>
 
 		<label>Description:</label>
 		<br>
 		<div></div>
-		<textarea name="description" placeholder="{{ item.description }}"></textarea>
+		<textarea name="description">{{ item.description }}</textarea>
 		<br>
 		<br>
 
